Fix white space in border of checked item

--- a/css/tracker.css
+++ b/css/tracker.css
@@ -50,7 +50,7 @@
 
 .icon-container {
   border-top-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.4rem;
 }
 
 .icon-container img {
